# minimal_caml

./: dune-project
lib/: client.ml  dune  image.ml  serialize.ml  target.ml
test/: dune
